--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -4,13 +4,16 @@
  <h1>My Blog</h1>
  {% for post in posts %}
    <h2>
-     <a href="{% url 'blog:post_detail' post.id %}">
+     <a 
+href="{{ post.get_absolute_url }}">
        {{ post.title }}
      </a>
    </h2>
-   <p class="date">
+   <p 
+class="date">
      Published {{ post.publish }} by {{ post.author }}
    </p>
    {{ post.body|truncatewords:30|linebreaks }}
  {% endfor %}
+{% include "blog/pagination.html" with page=page_obj %}
 {% endblock %}
